--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
+    "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.16.1",
@@ -14,13 +15,14 @@
     "axios": "^1.2.0",
     "daisyui": "^2.41.0",
     "firebase": "^9.14.0",
-    "framer-motion": "^12.23.22",
+    "framer-motion": "^12.23.24",
     "lottie-react": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
