--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/runtime": "^7.28.4",
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.9.0",
@@ -18,6 +19,7 @@
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "immer": "^10.1.3",
+    "jspdf": "^3.0.3",
     "lottie-react": "^2.3.1",
     "lucide-react": "^0.546.0",
     "react": "^18.2.0",
@@ -28,6 +30,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.12.7",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
