--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -5,27 +5,27 @@ on:
     branches: ["main"]
 
 jobs:
-  lint:
-    name: Super-Linter
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 1
+  # lint:
+  #   name: Super-Linter
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #       with:
+  #         fetch-depth: 1
 
-      - name: Lint codebase
-        uses: github/super-linter@v4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GHCR_PAT }}
-          DEFAULT_BRANCH: main
-          VALIDATE_ALL_CODEBASE: false
-          GITHUB_WORKSPACE: ${{ github.workspace }}
-          VALIDATE_JAVASCRIPT_ES: true
-          VALIDATE_JAVASCRIPT_STANDARD: false
-          VALIDATE_TYPESCRIPT_ES: false
-          VALIDATE_JSON: false
-          VALIDATE_YAML: false
-          VALIDATE_MARKDOWN: false
+  #     - name: Lint codebase
+  #       uses: github/super-linter@v4
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GHCR_PAT }}
+  #         DEFAULT_BRANCH: main
+  #         VALIDATE_ALL_CODEBASE: false
+  #         GITHUB_WORKSPACE: ${{ github.workspace }}
+  #         VALIDATE_JAVASCRIPT_ES: true
+  #         VALIDATE_JAVASCRIPT_STANDARD: false
+  #         VALIDATE_TYPESCRIPT_ES: false
+  #         VALIDATE_JSON: false
+  #         VALIDATE_YAML: false
+  #         VALIDATE_MARKDOWN: false
 
   build:
     runs-on: ubuntu-latest
