--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -33,7 +33,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 1 # Fetch all history for proper tag detection
+          fetch-depth: 0 # Fetch all history for proper tag detection
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       # Set up git for tagging
       - name: Configure Git
@@ -64,6 +65,14 @@ jobs:
 
           echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "New version: $NEW_VERSION"
+
+      # Update package.json with new version
+      - name: Update package.json version
+        run: |
+          npm version ${{ steps.version.outputs.new_version }} --no-git-tag-version
+          git add package.json
+          git commit -m "chore: bump version to ${{ steps.version.outputs.new_version }} [skip ci]"
+          git push
 
       # Build the Docker image with the new version
       - name: Build the Docker image
