--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -46,22 +46,25 @@ jobs:
       - name: Get next version
         id: version
         run: |
-          # Get the latest tag, defaulting to 1.0.0 if none exists
+          # Get the latest tag, defaulting to 0.0.0 if none exists or if the tag is not semver
           LATEST_TAG=$(git tag -l --sort=-v:refname | head -n 1)
 
-          if [ -z "$LATEST_TAG" ]; then
-            # If no tags exist, start with 1.0.1
-            NEW_VERSION="1.0.1"
-          else
-            # Parse the latest tag and increment the patch version
-            MAJOR=$(echo $LATEST_TAG | cut -d. -f1 | sed 's/v//g')
-            MINOR=$(echo $LATEST_TAG | cut -d. -f2)
-            PATCH=$(echo $LATEST_TAG | cut -d. -f3)
-            
-            # Increment patch version
-            NEW_PATCH=$((PATCH + 1))
-            NEW_VERSION="${MAJOR}.${MINOR}.${NEW_PATCH}"
+          # Ensure the tag is semver-like (optionally prefixed with v); otherwise reset to 0.0.0
+          if [ -z "$LATEST_TAG" ] || ! [[ "$LATEST_TAG" =~ ^v?[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            LATEST_TAG="0.0.0"
           fi
+
+          # Strip a leading v if present
+          CLEAN_TAG=${LATEST_TAG#v}
+
+          # Parse the latest tag and increment the patch version
+          MAJOR=$(echo $CLEAN_TAG | cut -d. -f1)
+          MINOR=$(echo $CLEAN_TAG | cut -d. -f2)
+          PATCH=$(echo $CLEAN_TAG | cut -d. -f3)
+
+          # Increment patch version
+          NEW_PATCH=$((PATCH + 1))
+          NEW_VERSION="${MAJOR}.${MINOR}.${NEW_PATCH}"
 
           echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "New version: $NEW_VERSION"
