--- a/.github/workflows/dev-build.yaml
+++ b/.github/workflows/dev-build.yaml
@@ -69,9 +69,9 @@ jobs:
           node-version: "18"
           cache: "npm"
 
-      # # Install dependencies
-      # - name: Install dependencies
-      #   run: npm ci
+      # Install dependencies
+      - name: Install dependencies
+        run: npm install
 
       # # Run tests
       # - name: Run tests
