--- a/.github/workflows/staging-qa-release.yaml
+++ b/.github/workflows/staging-qa-release.yaml
@@ -118,7 +118,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_PAT }}
 
       - name: Promote image to pre-release
         run: |
