--- a/.github/workflows/prod-promotion.yaml
+++ b/.github/workflows/prod-promotion.yaml
@@ -67,7 +67,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_PAT }}
 
       - name: Promote image to production
         run: |
@@ -112,7 +112,7 @@ jobs:
       - name: Create GitHub Release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GHCR_PAT }}
         with:
           tag_name: v${{ github.event.inputs.version }}
           release_name: Production Release v${{ github.event.inputs.version }}
