--- a/.github/workflows/dev-build.yaml
+++ b/.github/workflows/dev-build.yaml
@@ -99,31 +99,21 @@ jobs:
           path: bookify-client-${{ steps.version.outputs.new_version }}.tar.gz
           retention-days: 30
 
-      # Set up Docker Buildx
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      # Log in to Container Registry
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
+      # Create GitHub Release with artifact
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
         with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GHCR_PAT }}
-
-      # Build and push Docker image to staging
-      - name: Build and push Docker image (dev)
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:dev-${{ steps.version.outputs.new_version }}
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:dev-latest
-          labels: |
-            org.opencontainers.image.version=${{ steps.version.outputs.new_version }}
-            org.opencontainers.image.revision=${{ github.sha }}
-            build.timestamp=${{ steps.timestamp.outputs.timestamp }}
+          tag_name: v${{ steps.version.outputs.new_version }}
+          name: Release v${{ steps.version.outputs.new_version }}
+          body: |
+            ## Build Artifact
+            - **Version**: ${{ steps.version.outputs.new_version }}
+            - **Build Timestamp**: ${{ steps.timestamp.outputs.timestamp }}
+            - **Artifact**: bookify-client-${{ steps.version.outputs.new_version }}.tar.gz
+            - **Commit**: ${{ github.sha }}
+          files: bookify-client-${{ steps.version.outputs.new_version }}.tar.gz
+          draft: false
+          prerelease: true
 
       # Trigger staging deployment
       - name: Trigger staging deployment
@@ -136,8 +126,7 @@ jobs:
               workflow_id: 'staging-qa-release.yaml',
               ref: 'main',
               inputs: {
-                version: '${{ steps.version.outputs.new_version }}',
-                docker_tag: 'dev-${{ steps.version.outputs.new_version }}'
+                version: '${{ steps.version.outputs.new_version }}'
               }
             })
 
@@ -147,6 +136,6 @@ jobs:
           echo "## Build Summary" >> $GITHUB_STEP_SUMMARY
           echo "- **Version**: ${{ steps.version.outputs.new_version }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Build Timestamp**: ${{ steps.timestamp.outputs.timestamp }}" >> $GITHUB_STEP_SUMMARY
-          echo "- **Docker Tag**: dev-${{ steps.version.outputs.new_version }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Artifact**: bookify-client-${{ steps.version.outputs.new_version }}.tar.gz" >> $GITHUB_STEP_SUMMARY
+          echo "- **Release**: [v${{ steps.version.outputs.new_version }}](https://github.com/${{ github.repository }}/releases/tag/v${{ steps.version.outputs.new_version }})" >> $GITHUB_STEP_SUMMARY
           echo "- **Commit SHA**: ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
