--- a/.github/workflows/staging-qa-release.yaml
+++ b/.github/workflows/staging-qa-release.yaml
@@ -4,12 +4,17 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: "Version to deploy (e.g., 0.0.1)"
+        description: "Version to deploy"
+        required: true
+        type: string
+      docker_tag:
+        description: "Docker image tag"
         required: true
         type: string
 
 env:
-  ARTIFACT_NAME: bookify-client
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 permissions:
   contents: read
@@ -31,36 +36,17 @@ jobs:
         run: |
           echo "## Staging Deployment" >> $GITHUB_STEP_SUMMARY
           echo "- **Version**: ${{ github.event.inputs.version }}" >> $GITHUB_STEP_SUMMARY
+          echo "- **Docker Tag**: ${{ github.event.inputs.docker_tag }}" >> $GITHUB_STEP_SUMMARY
           echo "- **Environment**: Staging" >> $GITHUB_STEP_SUMMARY
 
-      # Download artifact from GitHub release
-      - name: Download artifact from release
-        run: |
-          echo "Downloading artifact from release..."
-          gh release download v${{ github.event.inputs.version }} \
-            --pattern "${{ env.ARTIFACT_NAME }}-${{ github.event.inputs.version }}.tar.gz" \
-            --dir ./artifacts
-          echo "✓ Artifact downloaded successfully"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Extract and verify artifact
-        run: |
-          mkdir -p staging-build
-          cd artifacts
-          tar -xzf ${{ env.ARTIFACT_NAME }}-${{ github.event.inputs.version }}.tar.gz -C ../staging-build/
-          echo "✓ Artifact extracted successfully"
-          echo "Build contents:"
-          ls -la ../staging-build/ | head -20
-
-      # Deploy to staging environment
+      # Deploy to staging environment (using Docker image)
       - name: Deploy to staging
         run: |
           echo "Deploying version ${{ github.event.inputs.version }} to staging..."
-          echo "Artifact: ${{ env.ARTIFACT_NAME }}-${{ github.event.inputs.version }}.tar.gz"
+          echo "Docker Image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.docker_tag }}"
           # Update your staging deployment command here
-          # Example: cp -r staging-build/* /path/to/staging/server/
-          # Example: systemctl restart staging-web-app
+          # Example: kubectl set image deployment/bookify-client bookify-client=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.docker_tag }} -n staging
+          # Example: docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.event.inputs.docker_tag }} && docker-compose up -d
           echo "✓ Deployment completed"
 
       # Run QA tests
@@ -184,6 +170,7 @@ jobs:
             ### Next Actions
             Once testing is complete and approved, trigger the **prod-promotion** workflow with:
             - Version: ${{ github.event.inputs.version }}
+            - Docker Tag: pre-release-${{ github.event.inputs.version }}
             - Docker Tag: pre-release-${{ github.event.inputs.version }}
 
             @${{ github.repository_owner }} for approval
